--- a/style.css
+++ b/style.css
@@ -35,9 +35,16 @@ h3 {
 section {
     padding: 100px 0;
 
-    max-width: 1110px;
+    width: 100%;
 
     text-align: center;
+}
+
+a:active,
+a:hover,
+a {
+    text-decoration: none;
+    color: #2A2626;
 }
 
 /* ---------HEADER-------- */
@@ -45,7 +52,6 @@ section {
 .header {
     position: relative;
     padding-bottom: 189px;
-
 }
 
 .background::before{
@@ -97,13 +103,13 @@ span {
     max-width: 1110px;
 }
 
-.first {
+.first_text {
     margin-right: 30px;
 
     width: 540px;
 }
 
-.second {
+.second_text {
     width: 540px;
     position: relative;
 }
@@ -141,7 +147,7 @@ span {
     padding-bottom: 30px;
 }
 
-.wrapper_2 {
+.wrapper_vid {
     padding: 0 ;
     padding-bottom: 485px;
 
@@ -167,6 +173,92 @@ span {
 
 /* ------END MAIN----- */
 
+/* --------MENU------- */
+
+.menu {
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 0;
+    
+    display: flex;
+
+    background: #42413C;
+}
+
+.white_letters {
+    color: #fff;
+}
+
+.title_left {
+    text-align: left;
+
+    width: 350px;
+    height: 323px;
+
+    list-style-type:none;
+}
+
+.title_left h2 {
+    font-size: 52px;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.card {
+    position: relative;
+
+    margin-bottom: 20px;
+
+    display: flex;
+    justify-content: space-between;
+
+    height: 323px;
+    width: 350px;
+
+    text-align: left;
+    list-style-type: none;
+
+    background-color: #F5F4F0;
+}
+
+.card a {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    padding: 24px;
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+  
+    text-decoration: none;
+}
+
+.card h3 {
+    color: #FE8A02;
+}
+
+.number {
+    padding-bottom: 40px;
+
+    font-size: 64px;
+    font-family: Neucha, sans-serif;
+    line-height: 1em;
+}
 
 
 
+
+
+
+
+
+
+
+/* --------END MENU------ */
