--- a/style.css
+++ b/style.css
@@ -241,8 +241,19 @@ span {
     text-decoration: none;
 }
 
+.card a:hover {
+    background: #FE8A02;
+    color: #fff;
+}
+
+.card h3:hover {
+    color: #fff;
+}
+
+
 .card h3 {
     color: #FE8A02;
+    
 }
 
 .number {
@@ -319,7 +330,87 @@ span {
 
     background: #fff;
 }
-
-
-
 /* ---------END TYPES-------- */
+
+/* --------FOOTER------- */
+footer {
+    background: #FFFFFF;
+
+}
+
+.wrapper_foot {
+    margin-top: 100px;
+    padding: 0;
+    background: #42413C;
+}
+
+form {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 55px;
+
+    width: 100%;
+
+    color: #fff;
+
+}
+
+.email {
+    height: 50px;
+
+    padding: 15px;
+}
+
+.email_div p {
+    font-size: 18px;
+}
+
+.email_div .accept {
+    font-size: 12px;
+}
+
+.accept a {
+    text-decoration: none;
+
+    color: #fff;
+}
+
+.btn_2 {
+    position: relative;
+    height: 50px;
+    width: 70px;
+
+    background: #FE8A02;
+
+}
+
+
+
+.btn_2::before {
+    content: "";
+
+    position: absolute;
+
+    display: block;
+
+    background-color: #FE8A02;
+    background-image: url(/img/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    width: 100%;
+    height: 100%;
+}
+
+.info {
+    padding-top: 60px;
+
+    font-size: 14px;
+    line-height: 160%;
+
+    text-align: center;
+}
+
+
+/* ---------END FOOTER-------- */
